--- a/NonGeneric Collection/NonGeneric Collection.csproj
+++ b/NonGeneric Collection/NonGeneric Collection.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>NonGeneric_Collection</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NModbus" Version="3.0.72" />
+  </ItemGroup>
+
 </Project>
